[package]
name = "pbus_db_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = {version= "0.7", features=["with-chrono-0_4", "with-serde_json-1"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
utility = { path = "../utility" }
